--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -4,12 +4,12 @@
 /*
 * Large-element styles
 */
-/* line 44, ../sass/style.scss */
+/* line 47, ../sass/style.scss */
 body {
   background-color: #ccc;
 }
 
-/* line 48, ../sass/style.scss */
+/* line 51, ../sass/style.scss */
 #hero {
   width: 974px;
   height: 370px;
@@ -23,7 +23,7 @@ body {
   padding: 0px;
 }
 
-/* line 61, ../sass/style.scss */
+/* line 64, ../sass/style.scss */
 #strip {
   position: absolute;
   top: 0px;
@@ -34,7 +34,7 @@ body {
 /*
 * Main nav styles
 */
-/* line 71, ../sass/style.scss */
+/* line 74, ../sass/style.scss */
 #features {
   height: 41.333px;
   width: 976px;
@@ -54,7 +54,7 @@ body {
   background-image: linear-gradient(#f25757, #ed3232 20%, #a61c1f 90%);
   text-transform: uppercase;
 }
-/* line 82, ../sass/style.scss */
+/* line 85, ../sass/style.scss */
 #features ul {
   margin: 0px;
   margin-left: 0px;
@@ -62,7 +62,7 @@ body {
   height: 100%;
   width: 100%;
 }
-/* line 88, ../sass/style.scss */
+/* line 91, ../sass/style.scss */
 #features ul li {
   width: 244px;
   display: block;
@@ -74,16 +74,16 @@ body {
   color: #faf7ed;
   font-family: "Helvetica", "Arial", sans-serif;
 }
-/* line 100, ../sass/style.scss */
+/* line 103, ../sass/style.scss */
 #features ul li.opened {
   text-shadow: rgba(250, 247, 237, 0.4) 0 0 4px;
 }
-/* line 104, ../sass/style.scss */
+/* line 107, ../sass/style.scss */
 #features ul li:hover {
   color: #FFFDF5;
   text-shadow: rgba(250, 247, 237, 0.8) 0 0 4px;
 }
-/* line 109, ../sass/style.scss */
+/* line 112, ../sass/style.scss */
 #features ul .feature-nav {
   position: relative;
   height: 18px;
@@ -93,14 +93,14 @@ body {
 /*
 * Inside of the feature itself. General styles.
 */
-/* line 120, ../sass/style.scss */
+/* line 123, ../sass/style.scss */
 .feature {
   padding: 0px;
   width: 974px;
   float: left;
   top: 0px;
 }
-/* line 126, ../sass/style.scss */
+/* line 129, ../sass/style.scss */
 .feature .feature-content {
   padding: 0px;
   height: 324.667px;
@@ -110,7 +110,7 @@ body {
 /*
 * For the Stories feature.
 */
-/* line 137, ../sass/style.scss */
+/* line 140, ../sass/style.scss */
 #stories .navlinks {
   overflow: hidden;
   *zoom: 1;
@@ -119,7 +119,7 @@ body {
   width: 324.667px;
   padding: 8px;
 }
-/* line 143, ../sass/style.scss */
+/* line 146, ../sass/style.scss */
 #stories .navlinks ul {
   list-style: none;
   margin: 0px;
@@ -127,7 +127,7 @@ body {
   height: 324.667px;
   padding-left: 0px;
 }
-/* line 149, ../sass/style.scss */
+/* line 152, ../sass/style.scss */
 #stories .navlinks ul li {
   height: 96.222px;
   width: 96.222px;
@@ -142,31 +142,31 @@ body {
   -o-box-shadow: 0px 0px 6px #dddddd;
   box-shadow: 0px 0px 6px #dddddd;
 }
-/* line 158, ../sass/style.scss */
+/* line 161, ../sass/style.scss */
 #stories .navlinks ul li figure {
   height: 96.222px;
   width: 96.222px;
   margin: 0px;
 }
-/* line 163, ../sass/style.scss */
+/* line 166, ../sass/style.scss */
 #stories .navlinks ul li figure img {
   width: 100%;
 }
-/* line 170, ../sass/style.scss */
+/* line 173, ../sass/style.scss */
 #stories .navlinks li.opened {
   -moz-box-shadow: 0px 0px 6px #333333;
   -webkit-box-shadow: 0px 0px 6px #333333;
   -o-box-shadow: 0px 0px 6px #333333;
   box-shadow: 0px 0px 6px #333333;
 }
-/* line 174, ../sass/style.scss */
+/* line 177, ../sass/style.scss */
 #stories .story {
   width: 649.333px;
   position: absolute;
   top: 0px;
   display: none;
 }
-/* line 179, ../sass/style.scss */
+/* line 182, ../sass/style.scss */
 #stories .story .story-image {
   width: 324.667px;
   height: 332.667px;
@@ -176,11 +176,11 @@ body {
   float: left;
   background-color: #000;
 }
-/* line 186, ../sass/style.scss */
+/* line 189, ../sass/style.scss */
 #stories .story .story-image img {
   width: 100%;
 }
-/* line 190, ../sass/style.scss */
+/* line 193, ../sass/style.scss */
 #stories .story section.story-blurb {
   width: 276.667px;
   height: 324.667px;
@@ -191,22 +191,22 @@ body {
   *zoom: 1;
   float: right;
 }
-/* line 198, ../sass/style.scss */
+/* line 201, ../sass/style.scss */
 #stories .story section.story-blurb header.story-blurb {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 26px;
 }
-/* line 202, ../sass/style.scss */
+/* line 205, ../sass/style.scss */
 #stories .story section.story-blurb .blurb {
   margin-top: 24px;
 }
-/* line 204, ../sass/style.scss */
+/* line 207, ../sass/style.scss */
 #stories .story section.story-blurb .blurb p {
   font-family: "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
 }
-/* line 210, ../sass/style.scss */
+/* line 213, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more {
   background-color: #d42222;
   border: none;
@@ -228,15 +228,15 @@ body {
   box-shadow: 0px 0px 6px #cccccc;
   text-shadow: rgba(0, 0, 0, 0.5) 0 0 2px;
 }
-/* line 224, ../sass/style.scss */
+/* line 227, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more:hover {
   background-color: #ed3232;
 }
-/* line 228, ../sass/style.scss */
+/* line 231, ../sass/style.scss */
 #stories .story section.story-blurb .story-read-more:active {
   background-color: #a61c1f;
 }
-/* line 233, ../sass/style.scss */
+/* line 236, ../sass/style.scss */
 #stories .story.opened {
   display: block;
 }
@@ -244,7 +244,7 @@ body {
 /*
 * For the Photos feature.
 */
-/* line 242, ../sass/style.scss */
+/* line 245, ../sass/style.scss */
 #photos .feature-content {
   margin: 0px;
   padding: 0px;
@@ -254,31 +254,31 @@ body {
   float: left;
   width: 974px;
 }
-/* line 251, ../sass/style.scss */
+/* line 254, ../sass/style.scss */
 #photos article.photoset {
   display: none;
 }
-/* line 255, ../sass/style.scss */
+/* line 258, ../sass/style.scss */
 #photos article.photoset.opened {
   display: block;
 }
-/* line 259, ../sass/style.scss */
+/* line 262, ../sass/style.scss */
 #photos .photo {
   float: left;
   display: none;
 }
-/* line 262, ../sass/style.scss */
+/* line 265, ../sass/style.scss */
 #photos .photo figure {
   width: 652.58px;
   height: 370px;
   margin: 0px;
 }
-/* line 266, ../sass/style.scss */
+/* line 269, ../sass/style.scss */
 #photos .photo figure img {
   width: 100%;
   float: left;
 }
-/* line 271, ../sass/style.scss */
+/* line 274, ../sass/style.scss */
 #photos .photo figcaption {
   width: 305.42px;
   margin: 0px;
@@ -296,7 +296,7 @@ body {
   -o-box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
   box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
 }
-/* line 284, ../sass/style.scss */
+/* line 287, ../sass/style.scss */
 #photos .photo figcaption .notch {
   position: absolute;
   color: #fffdf7;
@@ -306,24 +306,68 @@ body {
   margin: 0px;
   padding: 0px;
 }
-/* line 294, ../sass/style.scss */
+/* line 297, ../sass/style.scss */
 #photos .photo figcaption p {
   margin: 0px;
 }
-/* line 298, ../sass/style.scss */
+/* line 301, ../sass/style.scss */
 #photos .photo figcaption .credit {
   font-size: 11px;
 }
-/* line 307, ../sass/style.scss */
+/* line 310, ../sass/style.scss */
 #photos .photo.opened {
   display: block;
 }
-/* line 311, ../sass/style.scss */
+/* line 314, ../sass/style.scss */
 #photos .content {
   z-index: 0;
   float: left;
 }
-/* line 316, ../sass/style.scss */
+/* line 319, ../sass/style.scss */
+#photos .controls {
+  width: 652.58px;
+  position: absolute;
+  top: 0px;
+}
+/* line 324, ../sass/style.scss */
+#photos .controls .prev, #photos .controls .next {
+  height: 60px;
+  width: 60px;
+  font-family: "Georgia", "Times New Roman", serif;
+  font-size: 60px;
+  background-color: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  top: 125px;
+  border-radius: 60px;
+  margin: 4px;
+  border: solid 4px rgba(0, 0, 0, 0.6);
+}
+/* line 336, ../sass/style.scss */
+#photos .controls .prev p, #photos .controls .next p {
+  position: relative;
+  margin: 0px;
+  margin-top: -8px;
+  opacity: .6;
+}
+/* line 344, ../sass/style.scss */
+#photos .controls .prev {
+  left: 0px;
+  text-align: left;
+}
+/* line 348, ../sass/style.scss */
+#photos .controls .prev p {
+  margin-left: 12px;
+}
+/* line 353, ../sass/style.scss */
+#photos .controls .next {
+  right: 0px;
+  text-align: right;
+}
+/* line 357, ../sass/style.scss */
+#photos .controls .next p {
+  margin-right: 12px;
+}
+/* line 363, ../sass/style.scss */
 #photos .navlinks {
   z-index: 1;
   position: absolute;
@@ -335,7 +379,7 @@ body {
   float: right;
   left: 652.58px;
 }
-/* line 327, ../sass/style.scss */
+/* line 374, ../sass/style.scss */
 #photos .navlinks header {
   margin: 8px;
   line-height: 16px;
@@ -343,17 +387,17 @@ body {
   text-transform: uppercase;
   border-bottom: solid 1px #000;
 }
-/* line 335, ../sass/style.scss */
+/* line 382, ../sass/style.scss */
 #photos .navlinks ul {
   list-style: none;
   margin: 8px;
   padding: 0px;
 }
-/* line 340, ../sass/style.scss */
+/* line 387, ../sass/style.scss */
 #photos .navlinks ul li.opened {
   color: #666;
 }
-/* line 345, ../sass/style.scss */
+/* line 392, ../sass/style.scss */
 #photos .navlinks figure {
   height: 65.167px;
   width: 65.167px;
@@ -367,12 +411,12 @@ body {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 353, ../sass/style.scss */
+/* line 400, ../sass/style.scss */
 #photos .navlinks figure img {
   height: 100%;
   width: 100%;
 }
-/* line 358, ../sass/style.scss */
+/* line 405, ../sass/style.scss */
 #photos .navlinks figure.opened {
   -moz-box-shadow: 0px 0px 5px black;
   -webkit-box-shadow: 0px 0px 5px black;
