Put Cycle in there, and started converting the Photos.

--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -261,7 +261,7 @@ body {
 	
 	.photo{
 		float: left;
-		display: none;
+		//display: none;
 		figure{
 			width: $photos-feature-content;
 			height: $hero-height;
