--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -257,27 +257,29 @@ body {
 /* line 254, ../sass/style.scss */
 #photos article.photoset {
   display: none;
+  height: 370px;
+  width: 974px;
 }
-/* line 258, ../sass/style.scss */
+/* line 260, ../sass/style.scss */
 #photos article.photoset.opened {
   display: block;
 }
-/* line 262, ../sass/style.scss */
+/* line 264, ../sass/style.scss */
 #photos .photo {
   float: left;
 }
-/* line 265, ../sass/style.scss */
+/* line 267, ../sass/style.scss */
 #photos .photo figure {
   width: 652.58px;
   height: 370px;
   margin: 0px;
 }
-/* line 269, ../sass/style.scss */
+/* line 271, ../sass/style.scss */
 #photos .photo figure img {
   width: 100%;
   float: left;
 }
-/* line 274, ../sass/style.scss */
+/* line 276, ../sass/style.scss */
 #photos .photo figcaption {
   width: 305.42px;
   margin: 0px;
@@ -295,7 +297,7 @@ body {
   -o-box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
   box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
 }
-/* line 287, ../sass/style.scss */
+/* line 289, ../sass/style.scss */
 #photos .photo figcaption .notch {
   position: absolute;
   color: #fffdf7;
@@ -305,31 +307,31 @@ body {
   margin: 0px;
   padding: 0px;
 }
-/* line 297, ../sass/style.scss */
+/* line 299, ../sass/style.scss */
 #photos .photo figcaption p {
   margin: 0px;
 }
-/* line 301, ../sass/style.scss */
+/* line 303, ../sass/style.scss */
 #photos .photo figcaption .credit {
   font-size: 11px;
 }
-/* line 310, ../sass/style.scss */
+/* line 312, ../sass/style.scss */
 #photos .photo.opened {
   display: block;
 }
-/* line 314, ../sass/style.scss */
+/* line 316, ../sass/style.scss */
 #photos .content {
   z-index: 0;
   float: left;
 }
-/* line 319, ../sass/style.scss */
+/* line 321, ../sass/style.scss */
 #photos .controls {
   width: 652.58px;
   position: absolute;
   top: 0px;
 }
-/* line 324, ../sass/style.scss */
-#photos .controls .prev, #photos .controls .next {
+/* line 326, ../sass/style.scss */
+#photos .controls #prev, #photos .controls #next {
   height: 60px;
   width: 60px;
   font-family: "Georgia", "Times New Roman", serif;
@@ -341,32 +343,32 @@ body {
   margin: 4px;
   border: solid 4px rgba(0, 0, 0, 0.6);
 }
-/* line 336, ../sass/style.scss */
-#photos .controls .prev p, #photos .controls .next p {
+/* line 338, ../sass/style.scss */
+#photos .controls #prev p, #photos .controls #next p {
   position: relative;
   margin: 0px;
   margin-top: -8px;
   opacity: .6;
 }
-/* line 344, ../sass/style.scss */
-#photos .controls .prev {
+/* line 346, ../sass/style.scss */
+#photos .controls #prev {
   left: 0px;
   text-align: left;
 }
-/* line 348, ../sass/style.scss */
-#photos .controls .prev p {
+/* line 350, ../sass/style.scss */
+#photos .controls #prev p {
   margin-left: 12px;
 }
-/* line 353, ../sass/style.scss */
-#photos .controls .next {
+/* line 355, ../sass/style.scss */
+#photos .controls #next {
   right: 0px;
   text-align: right;
 }
-/* line 357, ../sass/style.scss */
-#photos .controls .next p {
+/* line 359, ../sass/style.scss */
+#photos .controls #next p {
   margin-right: 12px;
 }
-/* line 363, ../sass/style.scss */
+/* line 365, ../sass/style.scss */
 #photos .navlinks {
   z-index: 1;
   position: absolute;
@@ -378,7 +380,7 @@ body {
   float: right;
   left: 652.58px;
 }
-/* line 374, ../sass/style.scss */
+/* line 376, ../sass/style.scss */
 #photos .navlinks header {
   margin: 8px;
   line-height: 16px;
@@ -386,17 +388,17 @@ body {
   text-transform: uppercase;
   border-bottom: solid 1px #000;
 }
-/* line 382, ../sass/style.scss */
+/* line 384, ../sass/style.scss */
 #photos .navlinks ul {
   list-style: none;
   margin: 8px;
   padding: 0px;
 }
-/* line 387, ../sass/style.scss */
+/* line 389, ../sass/style.scss */
 #photos .navlinks ul li.opened {
   color: #666;
 }
-/* line 392, ../sass/style.scss */
+/* line 394, ../sass/style.scss */
 #photos .navlinks figure {
   height: 65.167px;
   width: 65.167px;
@@ -410,12 +412,12 @@ body {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 400, ../sass/style.scss */
+/* line 402, ../sass/style.scss */
 #photos .navlinks figure img {
   height: 100%;
   width: 100%;
 }
-/* line 405, ../sass/style.scss */
+/* line 407, ../sass/style.scss */
 #photos .navlinks figure.opened {
   -moz-box-shadow: 0px 0px 5px black;
   -webkit-box-shadow: 0px 0px 5px black;
